<resources>
    <string name="APP_ERROR_ACTIONID_13_FORCELOGOUT">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (12013).</string>
    <string name="APP_ERROR_PLAY_UKNOWN">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (11001).</string>
    <string name="CronetProviderClassName">com.netflix.mediaclient.net.NetflixCronetProvider</string>
    <string name="IBAN_ending">Last 4 digits of IBAN: {lastFour}</string>
    <string name="NFErr_Interrupted">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (0013).</string>
    <string name="NFErr_MC_NCCP_ImpossibleImpossibility">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (2007).</string>
    <string name="NFErr_MC_NCCP_MTicketRenewalRequired">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (2006).</string>
    <string name="NFErr_MC_NCCP_RegistrationRequired">It looks like Netflix has been deactivated on this device. It could be an issue with your account or perhaps your device was deactivated on the Netflix website (2004).</string>
    <string name="NFErr_MC_OpenDeviceFailure_Restart">Playback could not be started. If the problem persists, please restart your device and try again. (1018).</string>
    <string name="NFErr_NetworkError">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (0041).</string>
    <string name="NFErr_OFFLINE_PLAYBACK_FAILED">There is a problem with the video file.%1$s</string>
    <string name="NFErr_OFFLINE_PLAYBACK_FAILED_TIME_OFF">Please make sure the Date and Time settings are accurate on your device.%1$s</string>
    <string name="NFErr_STREAMING_PLAYBACK_FAILED">There is a problem playing the video. Please try again. %1$s</string>
    <string name="NFErr_STREAMING_PLAYBACK_FAILURE_PERSISTS">There is a problem playing the video. If the problem persists, please restart your device and try again. %1$s</string>
    <string name="NFErr_STREAMING_PLAYBACK_NETWORK">We\'re having a problem connecting to Netflix. Please try again later or try an alternative network connection. %1$s</string>
    <string name="NFErr_WidevinePluginBlackListed_playback">Playback could not be started. If the problem persists, please restart your device and try again. (%1$d).</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accesibility_add_to_my_list">Add to My List</string>
    <string name="accesibility_btnClose">Close</string>
    <string name="accesibility_btnEpisodes">Change episode</string>
    <string name="accesibility_btnLanguage">Change subtitle and/or audio source language</string>
    <string name="accesibility_btnMdxTarget">Play On</string>
    <string name="accesibility_btnPlayPause">Play/Pause</string>
    <string name="accesibility_btnSkipBack">Back 30 seconds</string>
    <string name="accesibility_btnSkipBack10">Back 10 seconds</string>
    <string name="accesibility_btnSkipFw10">Forward 10 seconds</string>
    <string name="accesibility_btnSkipIntro">Skip Intro</string>
    <string name="accesibility_btnStop">Stop</string>
    <string name="accesibility_btnVolume">Change Volume</string>
    <string name="accesibility_continue_watching">Continue watching %1$s</string>
    <string name="accesibility_episode_number_description">Episode %1$d: %2$s. %3$s. Runtime: %4$d minutes</string>
    <string name="accesibility_imgUiSplashLogo">Please wait while we start the Netflix application…</string>
    <string name="accesibility_next_episode">Play next episode</string>
    <string name="accesibility_play_episode">Play Episode</string>
    <string name="accesibility_play_video">Play %1$s</string>
    <string name="accesibility_player_up_next">Show what\'s up next</string>
    <string name="accesibility_postplay_select_recommendation">Select %1$s</string>
    <string name="accesibility_ratings_bar">Rated %1$d stars</string>
    <string name="accesibility_switch_to_pip">Switch to Picture in Picture Mode</string>
    <string name="accesibility_toggle_main_menu">Toggle Main Menu</string>
    <string name="accesibility_volume">Volume</string>
    <string name="accesibility_zoom">Zoom</string>
    <string name="access_error_account">Sorry, we can not load your account settings at this time, please try later.</string>
    <string name="access_error_invalid_country">Sorry, Netflix hasn\'t come to this part of the world yet</string>
    <string name="accessibility_create_profile_title">Create Profile</string>
    <string name="accessibility_current_profile_formatter">current profile is {profile}</string>
    <string name="accessibility_details_activity_title">Details for %1$s</string>
    <string name="accessibility_hamburger_menu_name">Open navigation drawer</string>
    <string name="accessibility_label_call_customer_support">call customer support</string>
    <string name="accessibility_label_chat_with_customer_support">chat with customer support</string>
    <string name="accessibility_navigate_up_button">Navigate up</string>
    <string name="accessibility_overlay_feedback_cancelled_rating">Cancelled</string>
    <string name="accessibility_overlay_feedback_video_rated">Video rated</string>
    <string name="accessibility_overlay_thumbs_close_button_description">Cancel</string>
    <string name="accessibility_overlay_thumbs_down_button_description">Thumbs down</string>
    <string name="accessibility_overlay_thumbs_up_button_description">Thumbs up</string>
    <string name="accessibility_rating_thumbs_rated_thumbs_down">Remove thumbs down rating</string>
    <string name="accessibility_rating_thumbs_rated_thumbs_up">Remove thumbs up rating</string>
    <string name="accessibility_rating_thumbs_unrated">Rate this video</string>
    <string name="accessibility_select_profile_formatter">select {profile}</string>
    <string name="accessibility_show_details_for">Show details for %1$s</string>
    <string name="accessibility_sliding_menu_name">Navigation</string>
    <string name="accessibility_switch_profile_title">Switch Profile</string>
    <string name="accessibility_video_player_title">Video Player</string>
    <string name="accountNumberCheckDigits_is_empty">Please enter the Account number digit.</string>
    <string name="button_message_download">Download</string>
    <string name="label_about">About</string>
    <string name="label_account">Account</string>
    <string name="label_bootParams">Bootloader parameters</string>
    <string name="label_bootParams_summary">Add parameters to bootloader URL as they are entered. Entry will NOT be URL encoded!</string>
    <string name="label_bugreport">Bug Report</string>
    <string name="label_bugreport_summary">Click here to save logcat to file.</string>
    <string name="label_bw_automatic_header">Automatic</string>
    <string name="label_bw_header">Cellular Data Usage</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_castappid_summary">Restart application for the change to take effect. Current ApplicationId:</string>
    <string name="label_castappid_title">Cast ApplicationId</string>
    <string name="label_check_network">Check Network</string>
    <string name="label_device">Device</string>
    <string name="label_diagnostics">Diagnostics</string>
    <string name="label_force_swvideo_title">Force VP9 Software Decoder</string>
    <string name="label_internet_speed_test">Internet Speed Test</string>
    <string name="label_ok">OK</string>
    <string name="label_open_source_licenses">Open Source Licenses</string>
    <string name="label_playeroverlay_enable">Enable player debug data</string>
    <string name="label_playeroverlay_summary">If you want to see playback metadata during playback.</string>
    <string name="label_pref_settings_allow_notifications">Allow Notifications</string>
    <string name="label_pref_settings_category_downloads">Downloads</string>
    <string name="label_pref_settings_category_legal">Legal</string>
    <string name="label_pref_settings_category_notification">Notifications</string>
    <string name="label_pref_settings_category_playback">Video Playback</string>
    <string name="label_pref_settings_category_qa">QA</string>
    <string name="label_pref_settings_downloads_remove_all">Delete All Downloads</string>
    <string name="label_pref_settings_legal_terms_of_use">Terms of Use</string>
    <string name="label_pref_settings_privacy_policy">Privacy</string>
    <string name="label_pref_settings_privacy_policy_cookies">Cookie Preferences</string>
    <string name="label_pref_settings_smart_downloads">Smart Downloads</string>
    <string name="label_pref_settings_wifi_warning_title">Wi-Fi Only</string>
    <string name="label_reset_license_sync_time">Reset License Sync Time</string>
    <string name="label_reset_license_sync_time_summary">Click here so that offline license sync time is reset</string>
    <string name="label_reset_uibootloader">Reset bootloader URL</string>
    <string name="label_reset_uibootloader_summary">Click here to reset bootloader URL to default</string>
    <string name="label_select_decoder">Streaming and Offline Video Decoder</string>
    <string name="label_select_video_format">Select preferred video decoder format</string>
    <string name="label_site">Site</string>
    <string name="label_site_summary">Click here to change link to UI.</string>
    <string name="offline_message_download_location">Download Location</string>
    <string name="offline_message_quality_standard">Standard</string>
    <string name="offline_message_quality_title">Download Video Quality</string>
    <string name="settings_key_open_source_licenses">settings_key_open_source_licenses</string>
</resources>